--- a/apps/frontend/templates/frontend/login.html
+++ b/apps/frontend/templates/frontend/login.html
@@ -4,9 +4,34 @@
 {% block content %}
 <div class="container-fluid login-bg">
     <form method="post" action="" id="login_form" role="form">
-        <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2">
+       {% csrf_token %}
+            <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 login">
+                <div class="logo row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <img src="" class="img-responsive">
+                    </div>
+                </div>
+                {% if messages %}
+                    <div class="row">
+                    {% for message in messages %}
+                        <div id="login-alert" role="alert" class="alert alert-danger col-sm-10 col-sm-offset-1">
+                            <i class="fa fa-exclamation-circle"></i>
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    </div>
+                {% endif %}
+                <div class="login-form row">
+                    <div class="form-group username">
+                        <input type="text" class="form-control" name="in_username" value="{% if username %}{{ username }}{% endif %}" placeholder="Brukernavn">
+                    </div>
+                    <div class="form-group password">
+                        <input type="password" class="form-control" name="in_password" placeholder="Passord">
+                    </div>
 
-        </div>
+                    <button type="submit" class="btn btn-block">Sign in</button>
+                </div>
+            </div>
     </form>
 
 </div>
