--- a/static/scss/modules/_login.scss
+++ b/static/scss/modules/_login.scss
@@ -2,6 +2,95 @@
 @import "config";
 
 .login-bg {
-  background-color: #000;
+  background: url(../img/login-bg-6.jpg) center/cover no-repeat;
+  height: 100vh;
+}
+
+.login {
+  margin-top: 5em;
+  font-family: $heading_font_family;
+  font-weight: 200;
+
+  .logo {
+    margin-bottom: 3em;
+    overflow: hidden;
+  }
+
+  .login-form {
+
+    overflow: hidden;
+
+    .username:before {
+      display: block;
+      width: 14px;
+      height: 14px;
+      content: "\f007";
+      font-family: 'FontAwesome';
+      background-position: -48px 0;
+      position: absolute;
+      padding-left: 20px;
+      padding-top: 17px;
+      opacity: 1.0;
+      z-index: 1000;
+      color: #ffffff;
+    }
+
+    .password:before {
+      display: block;
+      width: 14px;
+      height: 14px;
+      content: "\f023";
+      font-family: 'FontAwesome';
+      background-position: -48px 0;
+      position: absolute;
+      padding-left: 20px;
+      padding-top: 18px;
+      opacity: 1.0;
+      z-index: 1000;
+      color: #ffffff;
+    }
+
+    input {
+      height: 55px;
+      border-radius: 50px;
+      background-color: rgba(0, 0, 0, 0.8);
+      border: none;
+      color: #ffffff;
+      padding-left: 40px;
+
+      &::-webkit-input-placeholder {
+        color: #ffffff !important;
+      }
+
+      &:-moz-placeholder { /* Firefox 18- */
+        color: #ffffff !important;
+      }
+
+      &::-moz-placeholder {  /* Firefox 19+ */
+        color: #ffffff !important;
+      }
+
+      &:-ms-input-placeholder {
+        color: #ffffff !important;
+      }
+    }
+
+    button {
+      height: 55px;
+      border-radius: 50px;
+      background-color: #EE2F2D;
+      border: none;
+      color: #ffffff;
+    }
+
+    i {
+      color: #ffffff;
+    }
+
+    .form-control-feedback {
+      right: auto;
+      margin-right: 10px;
+    }
+  }
 
 }
