--- a/apps/frontend/templates/frontend/login.html
+++ b/apps/frontend/templates/frontend/login.html
@@ -5,16 +5,18 @@
 <div class="container-fluid login-bg">
     <form method="post" action="" id="login_form" role="form">
        {% csrf_token %}
-            <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 login">
+        <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4 col-xs-12 login-container">
+
+            <div class="col-sm-6 col-sm-offset-3 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 login">
                 <div class="logo row">
                     <div class="col-sm-8 col-sm-offset-2">
-                        <img src="" class="img-responsive">
+                        <img src="{{ STATIC_URL }}img/logo.png" class="img-responsive">
                     </div>
                 </div>
                 {% if messages %}
                     <div class="row">
                     {% for message in messages %}
-                        <div id="login-alert" role="alert" class="alert alert-danger col-sm-10 col-sm-offset-1">
+                        <div id="login-alert" role="alert" class="alert alert-danger">
                             <i class="fa fa-exclamation-circle"></i>
                             {{ message }}
                         </div>
@@ -23,15 +25,15 @@
                 {% endif %}
                 <div class="login-form row">
                     <div class="form-group username">
-                        <input type="text" class="form-control" name="in_username" value="{% if username %}{{ username }}{% endif %}" placeholder="Brukernavn">
+                        <input type="text" class="form-control" name="in_username" value="{% if username %}{{ username }}{% endif %}" placeholder="username...">
                     </div>
                     <div class="form-group password">
-                        <input type="password" class="form-control" name="in_password" placeholder="Passord">
+                        <input type="password" class="form-control" name="in_password" placeholder="password...">
                     </div>
-
                     <button type="submit" class="btn btn-block">Sign in</button>
                 </div>
             </div>
+        </div>
     </form>
 
 </div>
