--- a/apps/frontend/templates/frontend/login.html
+++ b/apps/frontend/templates/frontend/login.html
@@ -5,9 +5,8 @@
 <div class="container-fluid login-bg">
     <form method="post" action="" id="login_form" role="form">
        {% csrf_token %}
-        <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4 col-xs-12 login-container">
-
-            <div class="col-sm-6 col-sm-offset-3 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 login">
+        <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-xs-12 login-container">
+            <div class="col-xs-10 col-xs-offset-1 login">
                 <div class="logo row">
                     <div class="col-sm-8 col-sm-offset-2">
                         <img src="{{ STATIC_URL }}img/logo.png" class="img-responsive">
@@ -35,7 +34,6 @@
             </div>
         </div>
     </form>
-
 </div>
 
 {% endblock %}
