--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,11 @@
+.content {
+  margin-left: 190px;
+}
+
+.content {
+  margin-left: 190px;
+}
+
 .login-bg {
   height: 100vh;
   background-color: #30c8e8;
