--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -26,11 +26,15 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: #30c8e8;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+
+    -webkit-box-shadow: 0 2px 10px 4px rgba(59, 74, 79, 0.15);
+    -moz-box-shadow: 0 2px 10px 4px rgba(59, 74, 79, 0.15);
+    box-shadow: 0 2px 10px 4px rgba(59, 74, 79, 0.15);
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -73,7 +77,7 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    color: #fff;
 }
 
 .sidebar-nav li a:hover {
@@ -95,6 +99,11 @@
 
 .sidebar-nav > .sidebar-brand a {
     color: #999999;
+}
+
+.sidebar-brand img {
+    width: 150px;
+    margin-left: 10px;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
