--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,6 +3,7 @@
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
             <a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars fa-2x fa-fw"></i></a>
+            <img src="{{ STATIC_URL }}img/ewms-logo-white.png" class="img-responsive center-block">
         </li>
         <li>
             <a href="#"><i class="fa fa-home fa-2x fa-fw"></i> Home</a>
