--- a/apps/frontend/templates/frontend/main.html
+++ b/apps/frontend/templates/frontend/main.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="col-sm-12">
-            <table class="table table-bordered">
+            <table class="table table-bordered table-responsive">
                 <thead>
                 <tr>
                     <th>Firstname</th>
