--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -9,6 +9,7 @@
 // ------------------------------------------------------------------------------
 // EX: @import "modules/general";
 @import "modules/login";
+@import "modules/charts";
 
 
 // Other
