--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,3 @@
-.content {
-  margin-left: 190px;
-}
-
-.content {
-  margin-left: 190px;
-}
-
 .login-bg {
   height: 100vh;
   background-color: #30c8e8;
@@ -42,4 +34,8 @@
 
 .login-container .login button:hover {
   background-color: #f4402d;
+}
+
+.ct-label {
+  font-size: 0.65em;
 }
