--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -72,6 +72,7 @@
 .sidebar-nav li i {
     padding-top: 10px;
     margin-right: 5px;
+    color: #fff;
 }
 
 .sidebar-nav li a {
@@ -84,6 +85,10 @@
     text-decoration: none;
     color: #fff;
     background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:hover i {
+    color: #fe4332;
 }
 
 .sidebar-nav li a:active,
@@ -111,21 +116,54 @@
     background: none;
 }
 
-@media(min-width:768px) {
+
+
+#wrapper {
+    padding-left: 250px;
+}
+
+#wrapper.toggled {
+    padding-left: 50px;
+}
+
+#sidebar-wrapper {
+    width: 250px;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 50px;
+}
+
+#page-content-wrapper {
+    padding: 20px;
+    position: relative;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: relative;
+    margin-right: 0;
+}
+
+@media (max-width: 767px) {
     #wrapper {
-        padding-left: 250px;
+        padding-left: 150px;
     }
 
     #wrapper.toggled {
-        padding-left: 50px;
+        padding-left: 20px;
     }
 
     #sidebar-wrapper {
-        width: 250px;
+        width: 150px;
+        margin-left: -150px;
+        left: 150px;
+        -webkit-box-shadow: 0 0 0 0 rgba(59, 74, 79, 0.15);
+        -moz-box-shadow: 0 0 0 0 rgba(59, 74, 79, 0.15);
+        box-shadow: 0 0 0 0 rgba(59, 74, 79, 0.15);
     }
 
     #wrapper.toggled #sidebar-wrapper {
-        width: 50px;
+        width: 35px;
     }
 
     #page-content-wrapper {
@@ -138,6 +176,7 @@
         margin-right: 0;
     }
 }
+
 
 @media(max-width: 991px) {
     #page-content-wrapper {
