--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,27 +1,36 @@
 <!-- Sidebar -->
+
 <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
-            <a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars fa-2x fa-fw"></i></a>
-            <img src="{{ STATIC_URL }}img/ewms-logo-white.png" class="img-responsive center-block">
+            <a href="#menu-toggle" id="menu-toggle-2" class="hidden-xs"><i class="fa fa-bars fa-2x fa-fw"></i></a>
+            <a href="#menu-toggle" id="menu-toggle" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-bars fa-lg fa-fw"></i></a>
+
+            <img src="{{ STATIC_URL }}img/ewms-logo-white.png" class="img-responsive center-block hidden-xs">
         </li>
         <li>
-            <a href="#"><i class="fa fa-home fa-2x fa-fw"></i> Home</a>
+            <a href="{% url 'profile' %}" class="hidden-xs"><i class="fa fa-home fa-2x fa-fw"></i> Home</a>
+            <a href="{% url 'profile' %}" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-home fa-lg fa-fw"></i> Home</a>
         </li>
         <li>
-            <a href="#"><i class="fa fa-map-marker fa-2x fa-fw"></i> Calculate route</a>
+            <a href="{% url 'calculate-route' %}" class="hidden-xs"><i class="fa fa-map-marker fa-2x fa-fw"></i> Calculate route</a>
+            <a href="{% url 'calculate-route' %}" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-map-marker fa-lg fa-fw"></i> Calculate route</a>
         </li>
         <li>
-            <a href="#"><i class="fa fa-cogs fa-2x fa-fw"></i> Request RTL</a>
+            <a href="#" class="hidden-xs"><i class="fa fa-cogs fa-2x fa-fw"></i> Request RTL</a>
+            <a href="#" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-cogs fa-lg fa-fw"></i> Request RTL</a>
         </li>
         <li>
-            <a href="#"><i class="fa fa-trash fa-2x fa-fw"></i> Container usage</a>
+            <a href="#" class="hidden-xs"><i class="fa fa-trash fa-2x fa-fw"></i> Container usage</a>
+            <a href="#" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-trash fa-lg fa-fw"></i> Container usage</a>
         </li>
         <li>
-            <a href="#"><i class="fa fa-pie-chart fa-2x fa-fw"></i> Statistics</a>
+            <a href="#" class="hidden-xs"><i class="fa fa-pie-chart fa-2x fa-fw"></i> Statistics</a>
+            <a href="#" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-pie-chart fa-lg fa-fw"></i> Statistics</a>
         </li>
         <li class="bottom">
-            <a href="{% url 'logout' %}"><i class="fa fa-sign-out fa-2x fa-fw"></i>Log Out</a>
+            <a href="{% url 'logout' %}" class="hidden-xs"><i class="fa fa-sign-out fa-2x fa-fw"></i>Log Out</a>
+            <a href="{% url 'logout' %}" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-sign-out fa-lg fa-fw"></i>Log Out</a>
         </li>
 
     </ul>
