--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,3 +39,10 @@
 .ct-label {
   font-size: 0.65em;
 }
+
+.map-fifty {
+  width: 90%;
+  min-height: 300px;
+  max-height: 500px;
+  margin-bottom: 1em;
+}
