--- a/templates/menu.html
+++ b/templates/menu.html
@@ -17,16 +17,16 @@
             <a href="{% url 'calculate-route' %}" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-map-marker fa-lg fa-fw"></i> Calculate route</a>
         </li>
         <li>
-            <a href="#" class="hidden-xs"><i class="fa fa-cogs fa-2x fa-fw"></i> Request RTL</a>
-            <a href="#" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-cogs fa-lg fa-fw"></i> Request RTL</a>
+            <a href="{% url 'request-rtl' %}" class="hidden-xs"><i class="fa fa-cogs fa-2x fa-fw"></i> Request RTL</a>
+            <a href="{% url 'request-rtl' %}" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-cogs fa-lg fa-fw"></i> Request RTL</a>
         </li>
         <li>
-            <a href="#" class="hidden-xs"><i class="fa fa-trash fa-2x fa-fw"></i> Container usage</a>
-            <a href="#" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-trash fa-lg fa-fw"></i> Container usage</a>
+            <a href="{% url 'container-usage' %}" class="hidden-xs"><i class="fa fa-trash fa-2x fa-fw"></i> Container usage</a>
+            <a href="{% url 'container-usage' %}" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-trash fa-lg fa-fw"></i> Container usage</a>
         </li>
         <li>
-            <a href="#" class="hidden-xs"><i class="fa fa-pie-chart fa-2x fa-fw"></i> Statistics</a>
-            <a href="#" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-pie-chart fa-lg fa-fw"></i> Statistics</a>
+            <a href="{% url 'statistics' %}" class="hidden-xs"><i class="fa fa-pie-chart fa-2x fa-fw"></i> Statistics</a>
+            <a href="{% url 'statistics' %}" class="visible-xs hidden-sm hidden-md hidden-lg"><i class="fa fa-pie-chart fa-lg fa-fw"></i> Statistics</a>
         </li>
         <li class="bottom">
             <a href="{% url 'logout' %}" class="hidden-xs"><i class="fa fa-sign-out fa-2x fa-fw"></i>Log Out</a>
