--- a/apps/frontend/templates/frontend/calculate_route.html
+++ b/apps/frontend/templates/frontend/calculate_route.html
@@ -4,32 +4,35 @@
     <div class="col-sm-12">
         <h1 class="text-center">Calculate route</h1>
 
-        <!-- Left -->
-        <div class="col-xs-12 col-sm-6 select-route">
+        <!-- Top -->
+        <div class="col-xs-12 col-sm-12 select-route {% if showGenerated %}hidden{% endif %}">
             <div class="col-sm-12">
                 <h3>Select area:</h3>
                 <div id="startMap" class="map-fifty text-center"></div>
 
-                <div class="shait">
-                    <form method="POST" action="">
-                        <select class="form-control" name="team">
-                            <option value="0">Assign to team:</option>
-                            <option value="1">Team 1</option>
-                            <option value="2">Team 2</option>
-                        </select>
-                        <button class="btn btn-default route-btn btn-block">Generate route!</button>
+                <div class="area-form col-sm-4 col-sm-offset-4">
+                    <form method="POST" action="" class="form-inline">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <select class="form-control" name="team">
+                                <option value="0">Assign to team:</option>
+                                <option value="1">Team 1</option>
+                                <option value="2">Team 2</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-default route-btn">Generate route!</button>
                     </form>
                 </div>
             </div>
         </div>
 
 
-        <!-- Right -->
-        <div class="col-xs-12 col-sm-6">
+        <!-- Bottom -->
+        <div class="col-xs-12 col-sm-12 {% if not showGenerated %}hidden{% endif %}">
             <div class="col-sm-12">
                 <h3>Generated route: </h3>
                 <div id="routeMap" class="map-fifty text-center"></div>
-                <button class="btn btn-default route-btn btn-block">Send to collectors</button>
+                <button class="btn btn-default route-btn btn-block">Send to team {{ team }}</button>
             </div>
         </div>
     </div>
@@ -42,38 +45,82 @@
 
     <script>
         function initMap() {
+
+            // Initialize map
             var map = new google.maps.Map(document.getElementById('startMap'), {
-                center: {lat: 18.466, lng: -66.118},
-                zoom: 9
+                center: {lat: 63.419999, lng: 10.401487},
+                zoom: 13
             });
+
+            //Place markers
+            var markers = [];
+            var info = [];
+            {% for container in containers %}
+                var name = "{{ container.name }}";
+
+                markers[{{ container.id }}] = new google.maps.Marker({
+                    position: {lat: {{ container.latitude }} , lng: {{ container.longitude }} },
+                    map: map,
+                    title: name
+                });
+
+                info[{{ container.id }}] = new google.maps.InfoWindow({
+                    content: '<h3>' + name + '</h3> Last reading: 25.04.2016 16:32:12<br /> Last fill grade: 82%<br />'
+                });
+
+                markers[{{ container.id }}].addListener('click', function() {
+                    info[{{ container.id }}].open(map, markers[{{ container.id }}]);
+                });
+            {% endfor %}
+
 
             // Define the LatLng coordinates for the polygon's path.
             var triangleCoords = [
-                {lat: 25.774, lng: -80.190},
-                {lat: 18.466, lng: -66.118},
-                {lat: 32.321, lng: -64.757},
-                {lat: 25.774, lng: -80.190}
+                {lat: 63.423812, lng: 10.386792},
+                {lat: 63.417334, lng: 10.427367},
+                {lat: 63.407425, lng: 10.397978},
+                {lat: 63.420755, lng: 10.389847}
             ];
 
             // Define a rectangle and set its editable property to true.
             var rectangle = new google.maps.Polygon({
                 paths: triangleCoords,
                 strokeColor: '#FF0000',
-                strokeOpacity: 0.8,
-                strokeWeight: 2,
+                strokeOpacity: 0.6,
+                strokeWeight: 1,
                 fillColor: '#FF0000',
-                fillOpacity: 0.35,
+                fillOpacity: 0.25,
                 editable: true
             });
             rectangle.setMap(map);
 
 
-            var routeMap = document.getElementById('routeMap');
-            var rMap = new google.maps.Map(routeMap, {
-                center: {lat: 44.540, lng: -78.546},
-                zoom: 8
-            });
+            {% if showGenerated %}
+                var directionsService = new google.maps.DirectionsService;
+                var directionsDisplay = new google.maps.DirectionsRenderer;
+
+
+                // Map for generated route
+                var routeMap = document.getElementById('routeMap');
+                var rMap = new google.maps.Map(routeMap, {
+                    center: {lat: 63.422486, lng: 10.394557},
+                    zoom: 12
+                });
+
+                directionsDisplay.setMap(rMap);
+
+                directionsService.route({
+                    origin: {lat: 63.416397, lng: 10.407878},
+                    destination: {lat: 63.419451, lng: 10.401011},
+                    travelMode: google.maps.TravelMode.DRIVING
+                }, function(response, status) {
+                    if(status === google.maps.DirectionsStatus.OK) {
+                        directionsDisplay.setDirections(response);
+                    } else {
+                        window.alert('Failed: ' + status);
+                    }
+                });
+            {% endif %}
         }
     </script>
-
 {% endblock %}
