--- a/apps/frontend/templates/frontend/calculate_route.html
+++ b/apps/frontend/templates/frontend/calculate_route.html
@@ -94,6 +94,9 @@
             });
             rectangle.setMap(map);
 
+            /*
+             Route generation!
+             */
 
             {% if showGenerated %}
                 var directionsService = new google.maps.DirectionsService;
@@ -107,19 +110,53 @@
                     zoom: 12
                 });
 
+                var waypts = [];
+
+
+                // Only waypoint
+                waypts.push({
+                    location: {lat: 63.419451, lng: 10.401011},
+                    stopover: true
+                });
+
+
                 directionsDisplay.setMap(rMap);
 
                 directionsService.route({
                     origin: {lat: 63.416397, lng: 10.407878},
-                    destination: {lat: 63.419451, lng: 10.401011},
+                    destination: {lat: 63.413566, lng: 10.408587},
+                    waypoints: waypts,
+                    optimizeWaypoints: true,
                     travelMode: google.maps.TravelMode.DRIVING
                 }, function(response, status) {
+
                     if(status === google.maps.DirectionsStatus.OK) {
                         directionsDisplay.setDirections(response);
-                    } else {
+                    }
+                    else {
                         window.alert('Failed: ' + status);
                     }
                 });
+
+
+
+                /*
+                 This works!
+                 directionsDisplay.setMap(rMap);
+
+                 directionsService.route({
+                 origin: {lat: 63.416397, lng: 10.407878},
+                 destination: {lat: 63.419451, lng: 10.401011},
+                 travelMode: google.maps.TravelMode.DRIVING
+                 }, function(response, status) {
+                 if(status === google.maps.DirectionsStatus.OK) {
+                 directionsDisplay.setDirections(response);
+                 } else {
+                 window.alert('Failed: ' + status);
+                 }
+                 });
+
+                 */
             {% endif %}
         }
     </script>
