--- a/apps/frontend/templates/frontend/calculate_route.html
+++ b/apps/frontend/templates/frontend/calculate_route.html
@@ -10,8 +10,8 @@
                 <h3>Select area:</h3>
                 <div id="startMap" class="map-fifty text-center"></div>
 
-                <div class="area-form col-sm-4 col-sm-offset-4">
-                    <form method="POST" action="" class="form-inline">
+                <div class="area-form col-sm-6 col-sm-offset-3">
+                    <form method="POST" action="" class="form-inline text-center">
                         {% csrf_token %}
                         <div class="form-group">
                             <select class="form-control" name="team">
