--- a/static/scss/modules/_charts.scss
+++ b/static/scss/modules/_charts.scss
@@ -3,5 +3,14 @@
 
 .ct-label {
   font-size: 0.65em;
+  color: $black;
+
 }
 
+.ct-chart-pie {
+
+  .ct-label {
+    color: $white;
+    fill: $white;
+  }
+}
