--- a/apps/frontend/templates/frontend/request-rtl.html
+++ b/apps/frontend/templates/frontend/request-rtl.html
@@ -14,65 +14,46 @@
             </div>
         </div>
 
-        <div id="list-view-div" class="col-sm-12">
+        <div id="list-view-div" class="col-sm-12" style="margin-top: 1em;">
             <table id="list-view-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
+                    <th class="hidden-xs">Location</th>
+                    <th>Last reading</th>
+                    <th>Request</th>
                 </tr>
                 </thead>
                 <tfoot>
                 <tr>
                     <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
+                    <th class="hidden-xs">Location</th>
+                    <th>Last reading</th>
+                    <th>Request</th>
                 </tr>
                 </tfoot>
                 <tbody>
 
-                {% for container in info %}
+                {% for container in containers %}
                     <tr>
-                        <td>sdfdsf</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>{{ container.name }}</td>
+                        <td class="hidden-xs">{{ container.longitude }}, {{ container.latitude }}</td>
+                        <td>{{ container.last_reading.datetime }}</td>
+                        <td class="text-center"><button type="submit" data-target="#myModal" data-toggle="modal" name="{{ container.id }}" class="btn btn-danger btn-sm">Request</button></td>
                     </tr>
                 {% endfor %}
-
-                <tr>
-                    <td>Jackson Bradshaw</td>
-                    <td>Director</td>
-                    <td>New York</td>
-                    <td>65</td>
-                    <td>2008/09/26</td>
-                    <td>$645,750</td>
-                </tr>
                 </tbody>
             </table>
-        </div>
-
-        <div id="map-view-div" class="col-sm-12 hidden">
-            <div id="map" class="rtl-map text-center"></div>
-
 
             <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
-                <div class="modal-dialog">
+                <div class="modal-dialog" style="margin-top: 40%;">
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title">Modal title</h4>
+                            <h4 class="modal-title">RTL for Sintef</h4>
                         </div>
                         <div class="modal-body">
-                            <p>One fine body&hellip;</p>
+                            <p>The fill level is: 82%</p>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -81,6 +62,13 @@
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
+        </div>
+
+        <div id="map-view-div" class="col-sm-12 hidden">
+            <div id="map" class="rtl-map text-center"></div>
+
+
+
         </div>
 
     </div>
