--- a/apps/frontend/templates/frontend/calculate_route.html
+++ b/apps/frontend/templates/frontend/calculate_route.html
@@ -32,9 +32,26 @@
             <div class="col-sm-12">
                 <h3>Generated route: </h3>
                 <div id="routeMap" class="map-fifty text-center"></div>
-                <button class="btn btn-default route-btn btn-block">Send to team {{ team }}</button>
+                <button class="btn btn-default route-btn btn-block" data-toggle="modal" data-target="#myModal">Send to team {{ team }}</button>
             </div>
         </div>
+
+        <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Send route to team</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Team {{ team }} has now received the route on their smartphones!</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
     </div>
 
 {% endblock %}
