--- a/apps/frontend/templates/frontend/request-rtl.html
+++ b/apps/frontend/templates/frontend/request-rtl.html
@@ -35,8 +35,8 @@
                 <tbody>
 
                 {% for container in containers %}
-                    <tr>
-                        <td>{{ container.name }}</td>
+                    <tr class="container-instance">
+                        <td><span class="container-name">{{ container.name }}</span></td>
                         <td class="hidden-xs">{{ container.longitude }}, {{ container.latitude }}</td>
                         <td class="hidden-xs">{{ container.last_reading.datetime }}</td>
                         <td class="text-center"><button type="submit" name="{{ container.id }}" class="btn btn-danger btn-sm request-rtl">Request</button></td>
@@ -50,7 +50,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title">RTL for Sintef</h4>
+                            <h4 class="modal-title">RTL for <span class="rtl-container-name"></span></h4>
                         </div>
                         <div class="modal-body">
                             <p>The fill level is: <span class="req-rtl"></span></p>
@@ -85,8 +85,14 @@
 
         $(element).click(function(event){
 
-             if(counter == 0) {
+            var container = $(this).parent().parent();
+
+            if(counter == 0) {
                 $('.req-rtl').text('11%');
+
+                var name = $(container).find('.container-name').text();
+
+                $('.rtl-container-name').text(name);
                 counter++;
             } else if(counter == 1) {
                 $('.req-rtl').text('37%');
