--- a/apps/frontend/templates/frontend/usage.html
+++ b/apps/frontend/templates/frontend/usage.html
@@ -32,7 +32,7 @@
 
                 {% for container in containers %}
                     <tr>
-                        <td>{{ container.name }}</td>
+                        <td class="container-name" data-toggle="modal" data-target="#myModal">{{ container.name }}</td>
                         <td class="hidden-xs">{{ container.location }}</td>
                         <td class="hidden-xs">{{ container.last_reading }}</td>
                         <td class="hidden-xs">
@@ -48,7 +48,26 @@
                 {% endfor %}
                 </tbody>
             </table>
+
+            <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title">Usage history for container</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="some-chart" style="height: 300px; width: 90%; margin-top: 10px; background-color: #fff; font-size: 20px;"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div><!-- /.modal-content -->
+                </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
         </div>
+
+
 
     </div>
 
@@ -57,54 +76,60 @@
 {% block script %}
     <script src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
 
     <script>
-        var counter = 0;
-        var element = '.request-rtl';
+        /* Stolpe */
 
-        $(element).click(function(event){
-
-            if(counter == 0) {
-                $('.req-rtl').text('1%');
-                counter++;
-            } else if(counter == 1) {
-                $('.req-rtl').text('55%');
-                counter = 0;
+        /*
+        var chart = new Chartist.Bar('.some-chart', {
+            labels: ['Q1', 'Q2', 'Q3', 'Q4'],
+            series: [
+                [800000, 1200000, 1400000, 1300000],
+                [200000, 400000, 500000, 300000],
+                [100000, 200000, 400000, 600000]
+            ]
+        }, {
+            stackBars: true,
+            axisY: {
+                labelInterpolationFnc: function(value) {
+                    return (value / 1000) + 'k';
+                }
             }
+        }).on('draw', function(data) {
+            if(data.type === 'bar') {
+                data.element.attr({
+                    style: 'stroke-width: 30px'
+                });
+            }
+        });
+
+        */
 
 
-            var now = new Date().getTime();
-            while(new Date().getTime() < now + 900){ /* do nothing */ }
 
-            $('#myModal').modal('show');
+        var chart = new Chartist.Line('.some-chart', {
+            labels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16],
+            series: [
+                [62, 79, 83, 0, 34, 88, 99, 99, 0, 21, 68, 82, 84, 86, 92, 99],
+            ]
+        }, {
+            fullWidth: true,
+            chartPadding: {
+                right: 10
+            },
+            lineSmooth: Chartist.Interpolation.cardinal({
+                fillHoles: false,
+            }),
+            low: 0,
+        });
 
 
+        $('#myModal').on('shown.bs.modal', function (e) {
+            chart.update();
         });
 
 
     </script>
-
-    <script>
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: 18.466, lng: -66.118},
-                zoom: 10
-            });
-
-            var marker = new google.maps.Marker({
-                position: {lat: 18.466, lng: -66.118},
-                map: map,
-                title: 'Hello World!'
-            });
-
-            google.maps.event.addListener(marker, 'click', function() {
-                $('#myModal').modal('show')
-            });
-        }
-    </script>
-
-
 
     <script>
         $(document).ready(function() {
